[package]
name = "fl-js"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "javy_core"
path = "src/main.rs"

[lib]
name = "javy_quickjs_provider"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true, features = ["json"] }
javy-apis = { path = "../apis", features = [
    "console",
    "text_encoding",
    "random",
    "stream_io",
    "fl",
] }
once_cell = { workspace = true }
fl-wasm-rs = { version = "0.1.1" }

[features]
experimental_event_loop = []
